# polymarket-whale-tracker

./: .env.example  .gitignore  README.md  pyproject.toml
findings/: README.md  edge_scan_20260616_221941.json  edge_scan_20260617_003443.json  edge_scan_20260617_093936.json  edge_scan_20260617_170831.json  edge_scan_20260618_003853.json  edge_scan_20260618_093511.json  edge_scan_20260618_171111.json  edge_scan_20260619_004036.json  edge_scan_20260619_093907.json  edge_scan_20260619_165757.json  edge_scan_20260620_003338.json  edge_scan_20260620_091046.json  edge_scan_20260620_163840.json  edge_scan_20260621_003219.json  edge_scan_20260621_092041.json  edge_scan_20260621_163957.json  edge_scan_20260622_003548.json  edge_scan_20260622_100612.json  edge_scan_20260622_174423.json  edge_scan_20260623_003311.json  edge_scan_20260623_091114.json  edge_scan_20260623_165659.json  edge_scan_20260624_002843.json  edge_scan_20260624_091959.json  edge_scan_20260624_165015.json  edge_scan_20260625_091214.json  edge_scan_20260625_165049.json  edge_scan_20260626_003245.json  edge_scan_20260626_091142.json  edge_scan_20260626_164537.json  edge_scan_20260627_003110.json  edge_scan_20260627_090048.json  edge_scan_20260627_163037.json  edge_scan_20260628_002844.json  edge_scan_20260628_090913.json  edge_scan_20260628_163301.json  edge_scan_20260629_004204.json  edge_scan_20260629_094127.json  edge_scan_20260629_171435.json  (+74 more)
polywhale/: __init__.py  __main__.py  analyze.py  api.py  autopilot.py  cli.py  conviction.py  discover.py  fast.py  macro.py  persist.py  pnl.py  scan.py  signal.py  (+2 more)
(+8 files in other folders)
