[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polywhale"
version = "0.1.0"
description = "Discover and analyze algorithmic whales on Polymarket; emit copy-trade signals (read-only)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Eric Spencer" }]
keywords = ["polymarket", "prediction-markets", "trading", "whale-tracker", "bitcoin"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "requests>=2.31",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[project.scripts]
polywhale = "polywhale.cli:main"

[project.urls]
Homepage = "https://github.com/EricSpencer00/polymarket-whale-tracker"
Issues = "https://github.com/EricSpencer00/polymarket-whale-tracker/issues"

[tool.setuptools.packages.find]
include = ["polywhale*"]

[tool.ruff]
line-length = 100
target-version = "py310"
